<resources>
    <string name="app_name">Jenius Contact</string>
    <string name="action_settings">Settings</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="addcontact">Add Contact</string>
    <string name="editcontact">Edit Contact</string>
    <string name="avatar_url">Avatar URL</string>
    <string name="save">save</string>
    <string name="fill_all_fields">Please fill all the fields!</string>
    <string name="close">Close</string>
</resources>
