<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rezkyatinnov.jeniuscontact.ui.createupdatecontact.CreateUpdateContactViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@null"
                    app:mutableImageUrl="@{viewModel.avatar}"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/avatar_url"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:imeOptions="actionNext"
                        android:inputType="textUri"
                        android:textSize="18sp"
                        app:mutableText="@{viewModel.avatarMutable}"
                        app:textChangedListener="@{viewModel.avatarTextChangeListener}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/firstname"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:textSize="18sp"
                        app:mutableText="@{viewModel.firstnameMutable}"
                        app:textChangedListener="@{viewModel.firstnameTextChangeListener}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lastname"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:textSize="18sp"
                        app:mutableText="@{viewModel.lastnameMutable}"
                        app:textChangedListener="@{viewModel.lastnameTextChangeListener}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:textSize="18sp"
                        app:mutableText="@{viewModel.ageMutable}"
                        app:textChangedListener="@{viewModel.ageTextChangeListener}" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:text="@string/save"
                    app:onClickListener="@{viewModel.onSaveClickListener}"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
